RESOLVED FIXED190377
REGRESSION (r232416): Can not scroll after swiping back on quoteunquoteapps.com
https://bugs.webkit.org/show_bug.cgi?id=190377
Summary REGRESSION (r232416): Can not scroll after swiping back on quoteunquoteapps.com
Tim Horton
Reported 2018-10-08 16:13:32 PDT
REGRESSION (r232416): Can not scroll after swiping back on quoteunquoteapps.com
Attachments
Patch (11.14 KB, patch)
2018-10-08 16:15 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2018-10-08 16:15:36 PDT
Tim Horton
Comment 2 2018-10-08 16:18:05 PDT
WebKit Commit Bot
Comment 3 2018-10-09 10:19:08 PDT
Comment on attachment 351828 [details] Patch Clearing flags on attachment: 351828 Committed r236966: <https://trac.webkit.org/changeset/236966>
WebKit Commit Bot
Comment 4 2018-10-09 10:19:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.